tests/type_args_strict/type_args_strict.exp
Error ----------------------------------------------------------------------------------------------------- test.js:21:8

Cannot use `MyClass` [1] without 1 type argument. [missing-type-arg]

   test.js:21:8
   21| var c: MyClass = new MyClass(0); // error, missing argument list (1)
              ^^^^^^^

References:
   test.js:14:14
   14| class MyClass<T> {
                    ^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:34:9

Cannot use `MyClass2` [1] without 1-2 type arguments. [missing-type-arg]

   test.js:34:9
   34| var c2: MyClass2 = new MyClass2(0, ""); // error, missing argument list (1-2)
               ^^^^^^^^

References:
   test.js:25:15
   25| class MyClass2<T, U = string> {
                     ^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:8

Cannot use `MyObject` [1] without 1 type argument. [missing-type-arg]

   test.js:42:8
   42| var o: MyObject = { x: 0 }; // error, missing argument list
              ^^^^^^^^

References:
   test.js:38:14
   38| type MyObject<T> = {
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:46:36

Cannot use `MyObject` [1] without 1 type argument. [missing-type-arg]

   test.js:46:36
   46| type MySubobject = { y: number } & MyObject; // error, missing argument list
                                          ^^^^^^^^

References:
   test.js:38:14
   38| type MyObject<T> = {
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:50:11

Cannot use `MyInterface` [1] without 1 type argument. [missing-type-arg]

   test.js:50:11
   50| interface MyInterface<T> {
                 ^^^^^^^^^^^

References:
   test.js:50:22
   50| interface MyInterface<T> {
                            ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:60:26

Cannot use `MyClass` [1] with fewer than 1 type argument. [missing-type-arg]

   test.js:60:26
   60| class MySubclass extends MyClass { // error, missing argument list
                                ^^^^^^^

References:
   test.js:14:14
   14| class MyClass<T> {
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:69:27

Cannot use `MyClass3` [1] with fewer than 1 type argument. [missing-type-arg]

   test.js:69:27
   69| class MySubclass2 extends MyClass3 { } // error, missing argument list
                                 ^^^^^^^^

References:
   test.js:67:15
   67| class MyClass3<X, Y = void> { }
                     ^^^^^^^^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:79:11

Cannot use `MyClass` [1] with fewer than 1 type argument. [missing-type-arg]

   test.js:79:11
   79| var poly: MyClass<> = new MyClass; // error, too few arguments
                 ^^^^^^^^^

References:
   test.js:14:14
   14| class MyClass<T> {
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------------- test.js:83:11

Cannot instantiate class `MyClass4` because class `MyClass4` [1] is not a polymorphic type. [incompatible-use]

   test.js:83:11
   83| var mono: MyClass4<> = new MyClass4; // error, class is not polymorphic
                 ^^^^^^^^^^

References:
   test.js:81:7
   81| class MyClass4 { }
             ^^^^^^^^ [1]



Found 9 errors
